--- a/app/src/main/res/layout/student_comment_activity.xml
+++ b/app/src/main/res/layout/student_comment_activity.xml
@@ -21,7 +21,13 @@
         android:layout_height="250dp"
         android:layout_weight="45"
         android:gravity="center"
-        android:textSize="34sp" />
+        android:textSize="34sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft ="16dp"
+        android:layout_marginRight="16dp" />
+
+
+
 
 </LinearLayout>
 
