--- a/app/src/main/res/layout/student_comment_activity.xml
+++ b/app/src/main/res/layout/student_comment_activity.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageview_stundent_pic"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_weight="65"
+        android:layout_weight="45"
 
         />
 
@@ -19,15 +19,12 @@
         android:id="@+id/textview_student_comment"
         android:layout_width="match_parent"
         android:layout_height="250dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_weight="45"
         android:gravity="center"
-        android:textSize="34sp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft ="16dp"
-        android:layout_marginRight="16dp" />
-
-
-
+        android:textSize="34sp" />
 
 </LinearLayout>
 
