--- a/app/src/main/res/layout/student_comment_activity.xml
+++ b/app/src/main/res/layout/student_comment_activity.xml
@@ -14,17 +14,23 @@
         android:layout_weight="45"
 
         />
-
-    <TextView
-        android:id="@+id/textview_student_comment"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_weight="45"
-        android:gravity="center"
-        android:textSize="34sp" />
+        >
+
+        <TextView
+            android:id="@+id/textview_student_comment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="34sp"
+            android:gravity="center"/>
+
+    </ScrollView>
 
 </LinearLayout>
 
